<resources>
    <string name="app_name">CheckInApp</string>
    <string name="admin">Admin</string>
    <string name="back">Back</string>
    <string name="numberOfStudentsCheckedInOnDevice">Number of students checked in on device: </string>
    <string name="studentRecordInMemory"> student records memory</string>
    <string name="pushData">Push Data</string>
    <string name="pullData">Pull Data</string>
    <string name="pushDataAfterEvent">Note: Push data after event</string>
    <string name="pullDataBeforeEvent">Note: Pull data before event</string>
    <string name="pushDataWarning">You are about to upload the check-in data on this device into the database. Are you sure you want to continue?</string>
    <string name="pullDataWarning">"You are about to import student data on to this device from the database. Are you sure you want to continue?</string>
    <string name="adminWarning">You are entering the admin page, do you want to continue?</string>
    <string name="search">Search</string>
    <string name="studentID">StudentID:</string>
    <string name="lastName">LastName:</string>
    <string name="firstName">FirstName:</string>
    <string name="studentNotFound">StudentID cannot be found</string>
    <string name="schoolName">SchoolName:</string>
    <string name="mediaWavier">Media Wavier:</string>
    <string name="guest">Guests:</string>
    <string name="checkInComplete">Check-in complete</string>
    <string name="checkIn">Check In</string>
</resources>
